---
source: surreal-macros/src/query_define_table.rs
expression: statement
---
DEFINE TABLE user DROP SCHEMAFULL AS 
	SELECT * FROM $_param_00000000 WHERE country IS $_param_00000000 ORDER BY age NUMERIC DESC LIMIT 20 START AT 5;
PERMISSIONS
FOR select
	WHERE age >= $_param_00000000
FOR create, delete
	WHERE name IS $_param_00000000
FOR create, delete
	WHERE name IS $_param_00000000
FOR update
	WHERE age <= $_param_00000000;
